data/all_generated_tests/raw_wast_tests/loop_ImproperFunctionCallorReturnHandling_947.wast
;; 8. **Test Description 8**:    Construct a test where a loop iterates over a list of function indices, using `call_indirect` to execute them. Validate each function's execution and return, particularly focusing on the stack state before and after each function call.

(assert_invalid
  (module
    (type $t0 (func (param i32) (result i32)))
    (func $f (param i32) (result i32) 
      (i32.add (local.get 0) (i32.const 1))
    )
    (table 2 funcref)
    (elem (i32.const 0) $f)
    (func $test
      (loop (param i32) (result i32)
        (local.get 0)
        (call_indirect (type $t0) (i32.const 1) (i32.const 0))
        (br_if 0 (local.get 0))
      )
    )
  )
  "type mismatch"
)
